fixed image squishing (for real this time?)

--- a/popup.css
+++ b/popup.css
@@ -26,6 +26,13 @@ body {
     transition: all 0.3s ease;
     filter: grayscale(100%);
   }
+
+  #logo-text {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+  }
   
   #logo.active {
     filter: none;
